fixing camera and overflow bg

--- a/client/public/assets/css/style.css
+++ b/client/public/assets/css/style.css
@@ -11,6 +11,8 @@
 
 body {
   font-family: 'Quicksand', sans-serif;
+   background: #121416 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
+   z-index: 0;
 }
 
 h1,
